slide/src/test/ui/error/expected_close_paren_eof.slide
===in
1 + (2 * 3
===in

~~~stdout
~~~stdout

~~~stderr
error[P0003]: Mismatched closing delimiter `end of file`
  |
1 | 1 + (2 * 3 
  |           ^ expected closing `)`
  |           - help: change the delimiter: `)`
  |     - note: opening `(` here
  |
~~~stderr

~~~exitcode
1
~~~exitcode
